Add skills_development endpoint.
